# get_set_macro

./: .gitignore  Cargo.toml  README.md
src/: enums.rs  lib.rs  parser.rs  props.rs
tests/: trybuld.rs
tests/ui/: fail_allsetting.rs  fail_allsetting.stderr  ok_allsetting.rs  ok_default.rs  ok_readme.rs
