[package]
name = "get_set_macro"
version = "1.0.0"
edition = "2021"
authors = ["Nicolas Bird von Eyben <nicolas.bird.voneyben@gmail.com>"]
description = "Procedural macro to generate customizable getters and setters in Rust"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Orkking2/get_set_macro"
documentation = "https://docs.rs/get_set_macro"
categories = ["development-tools::procedural-macro", "rust-patterns"]
keywords = ["getter", "setter", "macro", "attribute", "accessor"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
trybuild = "1.0.104"
